# tick-telegram

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml
config/: config.py
handlers/: adddesc.py  clear.py  delete.py  fallback.py  list.py
src/: bot.py
src/handlers/: add.py  adddesc.py  clear.py  delete.py  done.py  fallback.py  list.py  start.py
src/handlers/buttons/: menu.py  todos.py
src/tick-telegram/handlers/: adddesc.py  delete.py
src/tick-telegram/handlers/buttons/: menu.py  menu_keyboard.py
src/tick_telegram/: __init__.py  bot.py  localization.py
src/tick_telegram/handlers/: add.py  adddesc.py  clear.py  delete.py  done.py  fallback.py  help.py  list.py  start.py
src/tick_telegram/handlers/buttons/: menu.py  menu_keyboard.py  todos.py
src/tick_telegram_bot/: bot.py
src/tick_telegram_bot/handlers/: add.py  adddesc.py  clear.py  delete.py  done.py  fallback.py  help.py  list.py  start.py
src/tick_telegram_bot/handlers/buttons/: menu.py  menu_keyboard.py  todos.py
src/tick_telegram_bot/storage/: todos.py
storage/: todos.py
tests/: test_todos_storage.py
