[project]
name = "tick-telegram-bot"
version = "0.1.0"
description = "A simple Telegram todo bot using local JSON storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "logger>=1.4",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=22.5",
]

[tool.uv]
# ensures uv creates/uses .venv in project directory
managed = true
